Make sure to use contentBigheader on mobile to position the footer better

--- a/src/component/container/ScrollContainer.sass
+++ b/src/component/container/ScrollContainer.sass
@@ -52,8 +52,8 @@
 }
 
 .contentMobile {
-  composes: u-overflowAuto from '../../styles/utils.scss';
   -webkit-overflow-scrolling: touch;
+  composes: u-overflowAuto from '../../styles/utils.scss';
   box-sizing: border-box;
   height: calc(100% - #{114/$font-size}rem);
   margin-bottom: #{6/$font-size}rem; /* 2 */
@@ -66,7 +66,7 @@
 }
 
 .contentBigheader {
-  height: calc(100% - #{174/$font-size}rem);
+  height: calc(100% - #{208/$font-size}rem);
 }
 
 .expanded {
